Bug 688967 - Problem with converting PS file with barcode font to PDF
Summary: Problem with converting PS file with barcode font to PDF
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.54
Hardware: All All
: P1 normal
Assignee: leonardo
URL:
Keywords:
: 688968 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-11-01 17:03 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer: 1110
Word Size: ---


Attachments
screenshot.png (182.12 KB, image/png)
2006-11-01 18:31 UTC, Marcos H. Woehrmann
Details
test.ps (4.46 MB, application/postscript)
2006-11-01 18:32 UTC, Marcos H. Woehrmann
Details
patch.txt (964 bytes, patch)
2006-11-26 10:42 UTC, leonardo
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2006-11-01 17:03:48 UTC
Ghostcript converts the attached PostScript to PDF incorrectly; specifically the barcodes are wrong.

I verified this by converting the file directly to ppm via Ghostscript:
gs -r300 -sDEVICE=ppmraw -sOutputFile=test1.ppm test.ps

And then to ppm via PDF:
gs -sDEVICE=pdfwrite -sOutputFile=test.pdf test.ps
gs -r300 -sDEVICE=ppmraw -sOutputFile=test2.ppm test.pdf

As you can tell from the attached screenshot.png there is a marked difference in the files (I converted 
the ppm files to tiff to make it easier to view using Preview).

The problem was originally listed as bug 688953, but I've closed that bug since I believe the comments 
were incorrect.  

Head exhibits the same behaviour as 8.54.
Comment 1 Marcos H. Woehrmann 2006-11-01 17:08:01 UTC
*** Bug 688968 has been marked as a duplicate of this bug. ***
Comment 2 Marcos H. Woehrmann 2006-11-01 18:31:32 UTC
Created attachment 2571 [details]
screenshot.png
Comment 3 Marcos H. Woehrmann 2006-11-01 18:32:37 UTC
Created attachment 2572 [details]
test.ps
Comment 4 leonardo 2006-11-26 10:42:49 UTC
Created attachment 2634 [details]
patch.txt

A patch candidate to be tested soom.
Comment 5 leonardo 2006-11-26 23:31:05 UTC
The patch caused a regression, so it shoudn't se delivered to the customer.
Comment 6 leonardo 2006-11-27 15:26:00 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2006-November/006990.html
Comment 7 Marcos H. Woehrmann 2006-11-27 18:05:01 UTC
Leonardo' s patch also works with 8.54, which is what the customer is using, so no need for a separate 
patch.